# scalabel-url-shortener

./: .env.sample  .pre-commit-config.yaml  README.md  pyproject.toml
apps/: __init__.py
core/: config.py  events.py  main.py
helper/: messages.py  responses.py
services/: events.py
services/logger/: config.py
services/mongo/: connection.py
services/scheduler/: tasks.py
