[tool.poetry]
name = "scalabel-url-shortener"
version = "0.1.0"
description = "Scalabel URL shortener like TinyURL"
authors = ["Mohsen Khodabakhshi <mim.khodabakhshi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.8"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
apscheduler = "^3.10.4"
redis = "^5.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
